--- a/draft.html
+++ b/draft.html
@@ -84,7 +84,7 @@
 
         <!-- 主要展示區 -->
         <div class="row d-flex flex-wrap">
-            <div class="col-12 col-md-6 postcard p-2">
+            <div class="col-12 col-md-6 postcard m-2">
                 <!-- postcard 的展示區 -->
                 <div class="d-flex flex-wrap">
                     <div class="px-2">
