--- a/draft.html
+++ b/draft.html
@@ -76,7 +76,7 @@
 <body>
     <div class="container py-3">
         <h5 class="title">臉書發文計畫【彰化五信 VS 彰化家扶 2023年義賣燈籠】</h5>
-        <h5 class="title">by © ChiaLingTW</h5>
+        <h5 class="title">by 張家綾 © ChiaLingTW</h5>
         <hr>
 
         <!-- postcard 內容 -->
@@ -99,7 +99,7 @@
                 <div class="p-2">
                     <span id="postText">彰化五信 VS 彰化家扶 2023年義賣燈籠<br>
                         臉書發文計畫<br>
-                        by © ChiaLingTW</span>
+                        by 張家綾 © ChiaLingTW</span>
                 </div>
                 <div class="py-2" style="text-align: center;">
                     <img src="https://cdn.discordapp.com/attachments/1054405459672571928/1059771590377742346/draftTest02.png"
