--- a/draft.html
+++ b/draft.html
@@ -46,6 +46,7 @@
         }
 
         .calendar a {
+            color: black;
             text-decoration: none;
         }
 
@@ -84,7 +85,7 @@
         <div class="row d-flex flex-wrap">
             <div class="col-12 col-md-6 postcard m-2">
                 <!-- postcard 的展示區 -->
-                <div class="d-flex flex-wrap p-2">
+                <div class="d-flex flex-wrap p-2" id="postTOP">
                     <div>
                         <img src="https://cdn.discordapp.com/attachments/1054405459672571928/1059453159141027940/300572748_422613053271139_7328697484970844116_n.jpg"
                             alt="臉書大頭貼" style="width: 60px;">
@@ -108,7 +109,7 @@
                 <div class="p-2">
                     <!-- calendar 預計發文月曆 -->
                     <h5 style="text-align: center;">1月</h5>
-                    <a href="#">
+                    <a href="#postTOP">
                         <table>
                             <tr>
                                 <th>日</th>
@@ -188,7 +189,7 @@
                 </div>
                 <div class="p-2">
                     <h5 style="text-align: center;">2月</h5>
-                    <a href="#">
+                    <a href="#postTOP">
                         <table>
                             <tr>
                                 <th>日</th>
