--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/0c8787c5b8.js" crossorigin="anonymous"></script>
     <script src="./js/demoTest.js" defer></script>
 
-    <title>Demo_社群編輯發文計畫</title>
+    <title>社群編輯發文計畫</title>
 </head>
 
 <body>
