調整樣式個人作品按鈕

--- a/demo.html
+++ b/demo.html
@@ -24,7 +24,7 @@
         <span>by&nbsp;張家綾&nbsp;<i class="fa-brands fa-github"></i>&nbsp;ChiaLingTW</span><br>
     </header>
     <main class="container">
-        <a href="index.html" class="topClick2">回到個人作品Web</a>
+        <a href="https://chialingtw.github.io/exercise_MyWeb/index.html" class="topClick2">回到個人作品Web</a>
         <a href="#calendarClick" class="position-fixed bottom-0 end-0 topClick">回到月曆重新選擇</a>
         <div class="row d-flex flex-wrap">
             <span id="calendarClick">點擊月曆上有小標題的日期，<br>可查看該日貼文內容～</span>
