更新檔案命名

--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0c8787c5b8.js" crossorigin="anonymous"></script>
-    <script src="./js/demoTest.js" defer></script>
+    <script src="./js/main.js" defer></script>
 
     <title>社群編輯發文計畫</title>
 </head>
@@ -189,7 +189,7 @@
                         </div>
                         <div>
                             <span>彰化第五信用合作社</span><br>
-                            <span id="postDate">2023年1月2日&nbsp;<i class="fa-solid fa-earth-americas"></i></span>
+                            <span id="postDate">2023年1月2日</span><span>&nbsp;<i class="fa-solid fa-earth-americas"></i></span>
                         </div>
                     </div>
                     <div class="postBOTTOM">
